# WebPod

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
bindings/python/: CMakeLists.txt  Makefile.am  __init__.py  gpod.i.in  ipod.py
cmake/: config.h.cmake
iPodManager/Pod Manager/Pod Manager.xcodeproj/project.xcworkspace/xcuserdata/paul.xcuserdatad/: UserInterfaceState.xcuserstate
m4/: ax_pkg_swig.m4  python.m4
src/: CMakeLists.txt  ithumb-writer.c
webpod/: app.py  ipod_manager.py  models.py  run.py
webpod/static/css/: style.css  theme-aqua.css
webpod/static/js/: app.js  dragdrop.js  ipod.js  library.js  player.js  sync.js  theme-switcher.js  upload.js
webpod/templates/: index.html
